styling of index, coffees, coffees-single, coffees-blends and brewing.html

--- a/brewing.html
+++ b/brewing.html
@@ -66,7 +66,7 @@
   <div class="container brewing-div">
  <div class="container">
    <div class="row no-gutters">
-     <div class="col-12 text-center pt-4">
+     <div class="col-12 pt-4">
        <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
        <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
        <p>The growing trend or movement for gourmet-type coffee making has resulted in a staggering range of gadgets and differing opinions.</p>
@@ -80,7 +80,7 @@
       <div class="row no-gutters">
 
         <div class="col-6 col-md-3">
-          <div class="card">
+          <div class="card cardsbrew">
             <div class="card-body text-center brew-cardsland">
               <a href="brewing.html#water">Water
               <img src="./assets/images/water.png" alt="water icon" class="card-img"></a>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="col-6 col-md-3">
-          <div class="card">
+          <div class="card cardsbrew">
             <div class="card-body text-center brew-cardsland">
             <a href="brewing.html#measure">Measure
               <img src="./assets/images/measure.png" alt="measure icon" class="card-img"></a>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col-6 col-md-3">
-          <div class="card">
+          <div class="card cardsbrew">
             <div class="card-body text-center brew-cardsland">
               <a href="brewing.html#method">Method
               <img src="./assets/images/method.png" alt="paper filter icon" class="card-img"></a>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="col-6 col-md-3">
-          <div class="card">
+          <div class="card cardsbrew">
             <div class="card-body text-center brew-cardsland">
             <a href="brewing.html#grind">Grind</a>
               <img src="./assets/images/grind.png" alt="grinder icon" class="card-img"></a>
@@ -126,7 +126,7 @@
 
   <div class="container">
     <div class="row no-gutters">
-      <div class="col">
+      <div class="col bluefont">
         <h3>Handy filter coffee brewing tips</h3>
         <p class="uppercase">Buy fresh, grind fresh</p>
         <ul>
