--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -58,13 +58,27 @@
             </div>
         </div>
 
-        <hr class="section-divider">
+        <div class="container">
+        <div class="row no-gutters">
+        <div class="col d-inline-flex justify-content-center">
+        <ul class="list-inline">
+        <li class="list-inline-item"><i class="fas fa-info-circle fa-5x"></i></li>
+        <li class="list-inline-item">
+            <h5>What are coffee blends?</h5>
+        </li></ul>
+        </div>
+        </div>
+        <div class="col">
+        <p>When coffee beans from multiple locations are roasted and mixed together, this is known as a coffee blend.</p>
+        <p>It is not uncommon to find coffee blends including beans from nine separate places, although in our roastery we typically use beans from around two to four different locations.</p>
+        </div>
+        </div>
 
         <!-- main media objects -->
 
 
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -98,7 +112,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -132,7 +146,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/indonesia-icon.png" alt="indonesia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -167,7 +181,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -201,7 +215,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -237,7 +251,7 @@
     </div>
 
     <div class="text-center">
-        <a href="coffees.html" class="btn btn-info my-button my-border">Back</a>
+        <a href="coffees.html" class="btn my-button my-border">Back</a>
         </div>
 
     <!-- footer -->
