--- a/coffees-single.html
+++ b/coffees-single.html
@@ -33,7 +33,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="intro.html">Intro to coffee</a>
                             <a class="dropdown-item" href="barista-sca.html">Barista SCA</a>
-                            <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>>
+                            <a class="dropdown-item" href="brewing-sca.html">Brewing SCA</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -57,12 +57,26 @@
             </div>
         </div>
 
-        <hr class="section-divider">
+        <div class="container">
+        <div class="row no-gutters">
+        <div class="col d-inline-flex justify-content-center">
+        <ul class="list-inline">
+        <li class="list-inline-item"><i class="fas fa-info-circle fa-2x"></i></li>
+        <li class="list-inline-item">
+            <h3>What is a Single Origin Coffee?</h3>
+        </li></ul>
+        </div>
+        </div>
+        <div class="col">
+        <p>The term single origin is essentially as it sounds - it means that the beans come from one place only, usually from a certain region or country. Single origin coffees may even be harvested from the same farm or estate.</p>
+        <p>Given that they are sourced from one place only, single origin coffees tend to be available exclusively at certain times of year, contingent on the growing season of the geographical location from which they were derived.</p>
+        </div>
+        </div>
 
         <!-- main media objects -->
 
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -96,7 +110,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -130,7 +144,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/papanewguinea-icon.png" alt="papa new guinea icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -164,7 +178,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -198,7 +212,7 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-12">
+            <div class="col-10 offset-1">
                 <div class="media my-border my-2 p-3">
                     <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
@@ -234,7 +248,7 @@
     </div>
 
     <div class="text-center">
-        <a href="coffees.html" class="btn btn-info my-button my-border">Back</a>
+        <a href="coffees.html" class="btn my-button my-border">Back</a>
         </div>
 
     <!-- footer -->
