--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		</div>
 
 		<!-- about us -->
-        <div class="container bgblack">
-		<div class="container">
+
+		<div class="container my-4 px-0">
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="quote-landing my-border">
@@ -77,20 +77,18 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
+            </div>
 		<div class="container my-4">
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="about">
-						<p>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
-							world.</p>
+						<h2>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
+							world.</h2>
 						<p>We currently supply fresh roasted coffee to order to 200+ venues nationwide.</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 	<!-- coffees -->
 
@@ -143,7 +141,7 @@
 				</div>
 			</div>
 
-        <div class="container">
+        <div class="container px-0">
         <div class="row no-gutters">
 		<div class="sca col-12">
 			<p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
@@ -178,7 +176,7 @@
 	<!-- brewing cards -->
 
 	<div class="container">
-		<div class="row">
+		<div class="row no-gutters">
 			<div class="col text-center">
 				<h3>Great coffee is useless without great brewing.</h3>
 				<p>We do half the work, now it’s your turn...</p>
@@ -269,8 +267,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image">
 								<div class="carousel-caption">
-									<p style="background-color: rgba(74,74,79,0.75);">"The feedback from our customers
-										has been very positive." - Oxmantown</p>
+									<p>"Feedback from our customers has been very positive", Oxmantown.</p>
 								</div>
 							</div>
 						</div>
@@ -278,8 +275,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
 								<div class="carousel-caption">
-									<p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. have been
-										there for us every step of the way." - BIBI's</p>
+									<p>"Coffee Project Co. always with us every step of the way", BIBI's.</p>
 								</div>
 							</div>
 						</div>
@@ -287,8 +283,7 @@
 							<div class="img-centering d-flex justify-content-center">
 								<img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
 								<div class="carousel-caption">
-									<p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. coffee is, no
-										doubt, exceptional quality coffee." - Forest Ave.</p>
+									<p>"Coffee Project Co. is exceptional quality coffee", Forest Ave.</p>
 								</div>
 							</div>
 						</div>
@@ -391,7 +386,9 @@
 										<label for="repeatPassword">Repeat Password</label>
 										<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
                                     </div>
-										<button type="submit" class="btn my-button ">Submit</button>
+                                        <div class="text-center">
+										<button type="submit" class="btn my-button">Submit</button>
+                                        </div>
 							</form>
                             </div>
                             </div>
