--- a/coffees.html
+++ b/coffees.html
@@ -53,45 +53,54 @@
     <div class="container headers-landing">
       <div class="row no-gutters">
         <div class="col">
-          <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" width=100% height=auto class="ourcoffees-img">
+          <img src="./assets/images/ourcoffee.jpg" alt="roasted coffee beans image" class="ourcoffees-img">
           <p class="ph-landing">Coffees</p>
         </div>
       </div>
     </div>
   </div>
 
+  <div class="container coffees-container">
+  <div class="row no-gutters">
+  <div class="col coffee-text">
+    <p>We carefully source and choose our coffee offerings to represent the uniqueness of each origin.</p>
+    <p>Then, we roast and blend based on two main philosophies: to preserve and highlight the natural characteristics of the original coffee bean and to ensure that a cup of <em>Coffee Project Co.</em> beans coffee will always taste as good as it smells.</p>
+    <p>We lean towards medium-light roasts that bring out a smoother and sweeter taste experience.</p>
+  </div>
+
+  </div></div>
+
   <!-- cards for beans section -->
 
-  <div class="container my-5">
+  <div class="container mt-5">
     <div class="card-deck">
       <div class="row no-gutters">
 
-        <div class="col-12 col-md-6">
-
-          <div class="card my-border">
+        <div class="col-10 offset-1 col-lg-4">
+          <div class="card" style="border-radius: 0.25rem;">
+          <div class="card-single">
             <div class="card-header">
-              <h3 class="uppercase">Single Origin</h3>
+              <h4 class="uppercase text-center">Single Origin</h4>
             </div>
             <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
             <div class="card-body">
-              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <a href="coffees-single.html" class="btn my-button">Read more</a>
+              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
+              <div class="text-center"><a href="coffees-single.html" class="btn my-button">Read more</a></div>
             </div>
           </div>
         </div>
+        </div>
 
+        <div class="col-10 offset-1 col-lg-4">
 
-
-        <div class="col-12 col-md-6">
-
-          <div class="card my-border">
+          <div class="card">
             <div class="card-header">
-              <h3 class="uppercase">Blends</h3>
+              <h4 class="uppercase text-center">Blends</h4>
             </div>
             <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
             <div class="card-body">
               <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-              <a href="coffees-blends.html" class="btn my-button">Read more</a>
+              <div class="text-center"><a href="coffees-blends.html" class="btn my-button">Read more</a></div>
             </div>
           </div>
         </div>
