added media queries to index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="container my-4 px-0">
 			<div class="row no-gutters">
 				<div class="col-12">
-					<div class="quote-landing my-border">
+					<div class="quote-landing">
 						<p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short,
 							enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
 					</div>
