fixing content in coffees-single and coffees-blend.html

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -60,12 +60,8 @@
 
         <div class="container">
         <div class="row no-gutters">
-        <div class="col d-inline-flex justify-content-center">
-        <ul class="list-inline">
-        <li class="list-inline-item"><i class="fas fa-info-circle fa-5x"></i></li>
-        <li class="list-inline-item">
-            <h5>What are coffee blends?</h5>
-        </li></ul>
+        <div class="col d-inline-flex justify-content-center mt-2">
+        <h2>What are coffee blends?</h2>
         </div>
         </div>
         <div class="col">
