--- a/coffees-single.html
+++ b/coffees-single.html
@@ -59,12 +59,8 @@
 
         <div class="container">
         <div class="row no-gutters">
-        <div class="col d-inline-flex justify-content-center">
-        <ul class="list-inline">
-        <li class="list-inline-item"><i class="fas fa-info-circle fa-2x"></i></li>
-        <li class="list-inline-item">
-            <h3>What is a Single Origin Coffee?</h3>
-        </li></ul>
+        <div class="col d-inline-flex justify-content-center mt-2">
+        <h2>What is a Single Origin Coffee?</h2>
         </div>
         </div>
         <div class="col">
