--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="container my-4">
 			<div class="row no-gutters">
 				<div class="col-12">
-					<div class="about">
+					<div class="about text-center">
 						<h2>We are a wholesale coffee roastery renowned for sourcing speciality coffee from all over the
 							world.</h2>
 						<p>We currently supply fresh roasted coffee to order to 200+ venues nationwide.</p>
@@ -179,7 +179,7 @@
 		<div class="row no-gutters">
 			<div class="col text-center">
 				<h3>Great coffee is useless without great brewing.</h3>
-				<p>We do half the work, now it’s your turn...</p>
+				<p>We do half the work, now it’s your turn.</p>
 				<hr class="section-divider">
 				<p>Learn how to brew a perfect cup at home...</p>
 				<p>(Don’t be afraid to experiment either!)</p>
@@ -320,7 +320,7 @@
               </div>
 						<div class="media-body">
 							<blockquote class="blockquote">
-								<p> "I got a job from doing this course within a week. Really recommended!"</p>
+								<p> "I got a job within a week. Really recommended!"</p>
 								<div class="d-none d-sm-block">
 									<p> (Luis Angel) </p>
 								</div>
