added content for courses

--- a/barista-sca.html
+++ b/barista-sca.html
@@ -60,28 +60,32 @@
         </div>
     </div>
 
-    <!-- media object -->
-
-    <div class="container">
+    <div class="container courses-container">
         <div class="row no-gutters">
-            <div class="col">
-
-                <div class="media">
-                    <img src="./assets/images/barista-sca.png" alt="latte art image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body">
-                        <h2 class="uppercase my-2 barista">Barista SCA</h2>
-                        <p class="mr-2">This course is for people new to the coffee industry, with no experience, and focuses on the key skills required to work in a coffee shop, like how to set your grinder, make espresso and foam and texture milk for cappuccinos.</p>
-                    </div>
+            <div class="col-10 offset-1">
+                <h4 class="uppercase my-4 barista">Barista SCA (Foundation)</h4>
+                <h6>1 day, 5 points</h6>
+                <p>New to coffee? This one day class focusses on the core skills required to deliver all the key drinks on the menu.  You’ll also gain an insight into how coffee is grown, processed and roasted.</p>
+                <h6>what we will cover</h6>
+                <ul>
+                <li>Explore the differences between Arabicas and Robustas and how to maintain freshness.</li>
+                <li>Extract the perfect espresso following a set of steps that make up the industry discipline.</li>
+                <li>Steam different milk textures to bring together a whole host of espresso based drinks.</li>
+                <li>Round off the learning with machine cleaning and basic maintenance, before sitting a series of assessments.</li>
+                </ul>
+                <h6>previous experience</h6>
+                <p>No prior knowledge required</p>
+                <h6>cost</h6>
+                <p>EUR 240 including exam, Cert Fee (EUR 60) + VAT</p>
+                </div>
                 </div>
             </div>
-        </div>
-    </div>
+
 
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text center uppercase text-center">Overview</h3>
                     <hr class="section-divider">
                     <p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p>
                     <p>Extract the perfect espresso following a set of steps that make up the industry discipline.</p>
@@ -99,7 +103,9 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <h3 class="text-center form-heading">Sounds interesting?</h3>
+                <h3 class="text-center form-heading uppercase">How does that sound?</h3>
+                <p>Send us a message and we will come back to you with course availability and more information</p>
+                <p><small>Alternatively please register your interest at hi@coffeeproject.ie.</small></p>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
