--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -60,28 +60,32 @@
   </div>
 </div>
 
-<!-- media object -->
 
-    <div class="container">
+    <div class="container courses-container">
         <div class="row no-gutters">
-            <div class="col">
-
-                <div class="media py-3">
-                    <img src="./assets/images/brewing-sca.png" alt="cupping coffee image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body">
-                        <h2 class="uppercase my-2 brewing">Brewing SCA</h2>
-                        <p class="mr-2">Foundation level introduces the beginner to the different ways of brewing coffee, from Chemex and syphon to V60 and French press. This course is suitable for people with no experience in this field.</p>
-                    </div>
+            <div class="col-10 offset-1">
+               <h4 class="uppercase my-4 brewing">Brewing SCA (Foundation)</h4>
+                <h6>1 day, 5 points</h6>
+                <p>This one day class focuses on the core skills required to start brewing great tasting filter coffee covering all brew variables and looking at commonly used devices.</p>
+                <h6>what we will cover</h6>
+                <ul>
+                <li>Brewing guidelines for industry standard coffee.</li>
+                <li>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</li>
+                <li>Look at different brewing methods and methodology for V60, Chemex, AeroPress and more.</li>
+                <li>Apply method based on grind size.</li>
+                </ul>
+                <h6>previous experience</h6>
+                <p>No prior knowledge required but recommend sitting the ‘Introduction to coffee’ module to ignite a passion for great tasting coffee.</p>
+                <h6>cost</h6>
+                <p>EUR 240 including exam, Cert Fee (EUR 60) + VAT</p>
+                </div>
                 </div>
             </div>
-        </div>
-    </div>
 
     <div class="container">
         <div class="row">
             <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text center uppercase text-center">Overview</h3>
                     <hr class="section-divider">
                     <p>Brewing guidelines for industry standard coffee.</p>
                     <p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p>
@@ -99,7 +103,9 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <h3 class="text-center form-heading">Sounds interesting?</h3>
+                <h3 class="text-center form-heading uppercase">How does that sound?</h3>
+                <p>Send us a message and we will come back to you with course availability and more information.</p>
+                <p><small>Alternatively please register your interest at hi@coffeeproject.ie.</small></p>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
