--- a/intro.html
+++ b/intro.html
@@ -61,22 +61,21 @@
     </div>
     <br>
 
-    <!-- media object -->
-
-    <div class="container media-container">
+    <div class="container courses-container">
         <div class="row no-gutters">
-            <div class="col">
-
-                <div class="media media-intro">
-                    <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center" style="width:50vw">
-                    <div class="col media-body">
-                        <h4 class="uppercase my-2 intro">Intro to coffee</h4>
-
-                    </div>
+            <div class="col-10 offset-1">
+                <h4 class="uppercase my-4 intro">Intro to coffee</h4>
+                <h6>full day, 10 points</h6>
+                <p>Want to start a journey into coffee but not quite sure what it’s all about? This is an ideal module to peel back the skin on this popular beverage and explore its wonders.</p>
+                <h6>what we will cover</h6>
+                <p>Take a look into the journey coffee takes from farming, harvesting, processing and roasting before finally brewing and drinking. Learn the flavours the wondrous coffee bean has to offer with a cupping session before deciding what module to sit next!</p>
+                <h6>previous experience</h6>
+                <p>No prior knowledge required</p>
+                <h6>cost</h6>
+                <p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
+                </div>
                 </div>
             </div>
-        </div>
-    </div>
 
 
     <!-- overview-section -->
@@ -85,13 +84,10 @@
         <div class="row no-gutters">
             <div class="col-10 offset-1">
                 <div class="sca-content">
-                    <h3 class="text-center uppercase mt-2">Overview</h3>
                     <hr class="section-divider">
                     <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
                     <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
                     <p>This course also includes “coffee cupping which allows you to taste the various flavours coffee has to offer.</p>
-                    <p>It has only one level and brings 10 points towards the Coffee Diploma.</p>
-                    <p>EUR 99 including exam, Cert Fee (EUR 60) + VAT</p>
 
                 </div>
             </div>
@@ -104,7 +100,9 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <h3 class="text-center form-heading">Sounds interesting?</h3>
+                <h3 class="text-center form-heading uppercase">How does that sound?</h3>
+                <p>Send us a message and we will come back to you with course availability and more information</p>
+                <p><small>Alternatively please register your interest at hi@coffeeproject.ie.</small></p>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
